--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ body {
   background-color: rgb(240, 240, 240);
 }
 
+* {
+  /* border: 1px solid red; */
+}
+
 .hide-scroll {
   scrollbar-width: none;
 }
